Added two new articles

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -86,3 +86,8 @@
 @misc{choosing_properties,
 	howpublished = {Scott Wlaschin: Choosing properties for property-based testing -- \url{https://fsharpforfunandprofit.com/posts/property-based-testing-2/}},
 	note = {Accessed: 27.11.2019}
+
+	
+@misc{finding_properties,
+	howpublished = {Hillel Wayne: Findin Property Tests -- \url{https://www.hillelwayne.com/post/contract-examples/}},
+	note = {Accessed: 27.11.2019}
