Added second article from Oskar

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -91,3 +91,13 @@
 @misc{finding_properties,
 	howpublished = {Hillel Wayne: Findin Property Tests -- \url{https://www.hillelwayne.com/post/contract-examples/}},
 	note = {Accessed: 27.11.2019}
+
+	
+@misc{using_types_to_unit_test,
+	howpublished = {Alexis King: Using types to unit-test in Haskell -- \url{https://lexi-lambda.github.io/blog/2016/10/03/using-types-to-unit-test-in-haskell/}},
+	note = {Accessed: 27.11.2019}
+
+	
+@misc{time_travelling,
+	howpublished = {Oskar Wickström: Time Travelling and Fixing Bugs with Property-Based Testing -- \url{https://wickstrom.tech/programming/2019/11/17/time-travelling-and-fixing-bugs-with-property-based-testing.html}},
+	note = {Accessed: 27.11.2019}
