--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -410,50 +410,38 @@ Posts in each section are roughly ordered by difficulty.
 
 \part{Posts on designing and structuring code}
 
-\input{matt_parsons.tex}
-
-
-\input{david_luposchainsky.tex}
-
-
-\input{alexis_king.tex}
-
-
-\input {jasper_van_der_jeugt.tex}
-
-
-\input {tom_ellis.tex}
-
-\input{michael_snoyman.tex}
-
-
-\input{matt_parsons2.tex}
-
-
-\input{sandy_maguire.tex}
+% \input{matt_parsons.tex}
+% 
+% \input{david_luposchainsky.tex}
+% 
+% \input{alexis_king.tex}
+% 
+% \input {jasper_van_der_jeugt.tex}
+% 
+% \input {tom_ellis.tex}
+% 
+% \input{michael_snoyman.tex}
+% 
+% \input{matt_parsons2.tex}
+% 
+% \input{sandy_maguire.tex}
 
 
 
 \part{Posts on testing}
 
 
-\input {jasper_van_der_jeugt2.tex}
+% \input {jasper_van_der_jeugt2.tex}
+% 
+% \input{oskar_wickstrom.tex}
+% 
+% \input{scott_wlaschin.tex}
+% 
+% \input{hillel_wayne.tex}
 
+\input{alexis_king2.tex}
 
-\input{oskar_wickstrom.tex}
-
-
-\input{scott_wlaschin.tex}
-
-
-\input{hillel_wayne.tex}
-
-
-
-
-
-
-
+\input{oskar_wickstrom2.tex}
 
 
 
