Finished all articles

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -101,3 +101,13 @@
 @misc{time_travelling,
 	howpublished = {Oskar Wickström: Time Travelling and Fixing Bugs with Property-Based Testing -- \url{https://wickstrom.tech/programming/2019/11/17/time-travelling-and-fixing-bugs-with-property-based-testing.html}},
 	note = {Accessed: 27.11.2019}
+
+	
+@misc{metamorphic_testing,
+	howpublished = {Hillel Wayne: Metamorphic Testing -- \url{https://www.hillelwayne.com/post/metamorphic-testing/}},
+	note = {Accessed: 27.11.2019}
+
+	
+@misc{unit_testing_monad_mock,
+	howpublished = {Alexis King: Unit testing effectful Haskell with monad-mock -- \url{https://lexi-lambda.github.io/blog/2017/06/29/unit-testing-effectful-haskell-with-monad-mock/}},
+	note = {Accessed: 27.11.2019}
