--- a/alexis_king2.tex
+++ b/alexis_king2.tex
@@ -1,5 +1,5 @@
 \chapter{Using types to unit-test in Haskell - Alexis King}
-
+\label{sec:using_types_to_unit_test}
 
 \begin{quotation}
 \noindent\textit{\textbf{William Yao:}}
